<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Screen Combo</string>
    <string name="cancel">Cancel</string>
    <string name="clearable_edittext_clear_description">Clear</string>
    <string name="copy">Copy</string>
    <string name="default_boss_terminal_name">Mi Notebook</string>
    <string name="display_max_screen_count_toast">You can open up to 2 windows in this version</string>
    <string name="display_not_support_secondary_toast">"Can't open this app in a new window"</string>
    <string name="download_cancel">Cancel</string>
    <string name="download_canceled">Download canceled</string>
    <string name="download_failed">"Couldn't download"</string>
    <string name="download_hide">Hide</string>
    <string name="download_percent">%1$d%%</string>
    <string name="download_receiving">Receiving items %1$s/%2$s</string>
    <string name="downloading">Downloading…</string>
    <string name="early_morning">Morning</string>
    <string name="enable_wifi_alert_cancel">Cancel</string>
    <string name="enable_wifi_alert_message">Screen Combo needs Wi-Fi to be able yo connect to a computer. Turn on now?</string>
    <string name="enable_wifi_alert_message_china">Screen Combo needs WLAN to be able yo connect to a computer. Turn on now?</string>
    <string name="enable_wifi_alert_ok">Turn on</string>
    <string name="enable_wifi_alert_title">Turn on Wi-Fi</string>
    <string name="enable_wifi_alert_title_china">Turn on WLAN</string>
    <string name="expand_button_title">Advanced</string>
    <string name="miuix_appcompat_cloud_state_disabled">Sync with the cloud is off</string>
    <string name="miuix_appcompat_cloud_state_finished">Synced with the cloud successfully</string>
    <string name="miuix_appcompat_cloud_state_syncing">Syncing with the cloud…</string>
    <string name="miuix_sbl_tracking_progress_labe_pull_to_refresh">Pull down to refresh</string>
    <string name="miuix_sbl_tracking_progress_labe_refreshed">Refreshed successfully</string>
    <string name="miuix_sbl_tracking_progress_labe_refreshing">Refreshing…</string>
    <string name="miuix_sbl_tracking_progress_labe_release_to_refresh">Release to refresh</string>
    <string name="miuix_sbl_tracking_progress_labe_up_nodata">"That's all for now"</string>
    <string name="miuix_sbl_tracking_progress_labe_up_none">"That's all for now"</string>
    <string name="miuix_sbl_tracking_progress_labe_up_refresh">Just a sec…</string>
    <string name="miuix_sbl_tracking_progress_labe_up_refresh_fail">"Couldn't load items"</string>
    <string name="more">More</string>
    <string name="not_set">Not set</string>
    <string name="notification_channel_description_download">Show download progress in the Notification shade</string>
    <string name="notification_channel_name_download">Show download progress</string>
    <string name="notify_connected_action_button">Disconnect</string>
    <string name="notify_connected_message">You can transfer files and interact with your phone using this computer</string>
    <string name="notify_connected_title">Connected to %1$s</string>
    <string name="preference_copied">\"%1$s\" copied to clipboard.</string>
    <string name="privacy_all_purpose">Welcome to Screen Combo! This app allows you to transfer files and interact with your phone using a computer.</string>
    <string name="privacy_describe_change_wifi_state">For connecting devices and transferring files using Wi-Fi</string>
    <string name="privacy_describe_location">For finding computers nearby and transferring files</string>
    <string name="privacy_describe_record_audio">For redirecting audio playback to your computer</string>
    <string name="privacy_describe_storage">For sending and receiving files</string>
    <string name="save_failed">"Couldn't save"</string>
    <string name="scanner_uninstalled_text">"Looks like Scanner isn't installed on your device. Install Scanner first."</string>
    <string name="scanner_uninstalled_title">Install Scanner</string>
    <string name="search_menu_title">Search</string>
    <string name="settings_connect">How to connect</string>
    <string name="settings_connect_more_help"><u>Help</u></string>
    <string name="settings_connect_summary1">Open Mi Smart Share on your computer and select \"Screen Combo\". You can download Mi Smart Share from www.miui.com.</string>
    <string name="settings_connect_summary2">Scan the QR code on the computer screen with your mobile device. You can use multiple system apps (e.g. Scanner, Camera, Mi Browser) to do that.</string>
    <string name="settings_connect_title1">Step 1</string>
    <string name="settings_connect_title2">Step 2</string>
    <string name="settings_feature">Special features</string>
    <string name="settings_feature_characteristics">Special features</string>
    <string name="settings_feature_dnd_summary">Silence notifications when your device is connected to a computer</string>
    <string name="settings_feature_dnd_title">DND</string>
    <string name="settings_feature_files_drag_summary">Drag and drop items to transfer them to and from your device</string>
    <string name="settings_feature_files_drag_title">Transfer files</string>
    <string name="settings_feature_keep_screen_summary">Keep your device unlocked to prevent unexpected disconnections</string>
    <string name="settings_feature_keep_screen_title">"Don't lock screen"</string>
    <string name="settings_feature_multi_window_summary">"Right click the copy of your phone's screen to make another one"</string>
    <string name="settings_feature_multi_window_title">Open multiple windows</string>
    <string name="settings_feature_pc_edit_files_summary">Right click the items in Gallery or File Manager to edit them on your computer.</string>
    <string name="settings_feature_pc_edit_files_title">Edit items from your phone on your computer</string>
    <string name="settings_home">Screen Combo</string>
    <string name="settings_home_device_disconnect">Disconnect</string>
    <string name="settings_home_device_group">Connected device</string>
    <string name="settings_home_tips">"Screen Combo places a copy of your phone's screen on a connected computer, allowing you to transfer files and interact with your mobile device there."</string>
    <string name="settings_more_help">Help</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_scanner_button">Scanner</string>
    <string name="time_picker_dialog_title">Set time</string>
    <string name="worker_authorization_message">Screen Combo allows you to transfer files and interact with your phone using a computer.</string>
    <string name="worker_authorization_title">Connect now?</string>
    <string name="worker_authorized">%1$s accepted your request</string>
    <string name="worker_connect_cancel_tips">Cancel</string>
    <string name="worker_connect_fail_btn_retry">Try again</string>
    <string name="worker_connect_fail_message">A network error occurred. Wait a minute or two and try again.</string>
    <string name="worker_connect_fail_title">"Couldn't connect"</string>
    <string name="worker_connect_help">Help</string>
    <string name="worker_connecting_message">Connecting…</string>
    <string name="worker_try_join_in_connected_state">Connected successfully</string>
    <string name="worker_try_join_in_connecting_state">Connecting device…</string>
</resources>
