<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:layout_width="fill_parent" android:layout_height="wrap_content" android:title="@string/settings_home"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.xiaomi.mirror.settings.SettingsHomeImagePreference android:layout="@layout/settings_home_image_layout" android:key="home_image" />
    <PreferenceCategory android:title="@string/settings_home_device_group" android:key="pref_key_home_device">
        <com.xiaomi.mirror.settings.SettingsHomeDevicePreference android:layout="@layout/settings_home_device_layout" android:key="pref_key_home_device_layout" />
    </PreferenceCategory>
    <PreferenceCategory>
        <CheckBoxPreference android:title="@string/settings_feature_dnd_title" android:key="pref_key_mirror_dnd_enable" android:summary="@string/settings_feature_dnd_summary" android:defaultValue="false" />
        <Preference android:title="@string/settings_connect" android:key="pref_key_connect" />
        <Preference android:title="@string/settings_feature" android:key="pref_key_feature" />
        <Preference android:title="@string/settings_privacy_policy" android:key="pref_key_privacy_policy" />
    </PreferenceCategory>
</PreferenceScreen>